[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "EnergySim"
version = "0.0.1"
authors = [
  { name="Philip Hierhager", email="Philip.Hierhager@googlemail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.11, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium",
    "numpy",
    "pytest",
    "pandas",
    "jax",
    "jaxopt",
    "equinox",
    "flax"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["energysim*"]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]